# angular_velocity_interpolator

./: CMakeLists.txt
cmake/: Findsteam.cmake
include/angular_velocity_interpolator/: angular_velocity_interpolator.h
src/: angular_velocity_interpolator.cpp  bindings.cpp  main.cpp
